examples/ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: APP_NAME-ingress
  namespace: NAMESPACE
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: HOSTNAME.iron-lab.org
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - HOSTNAME.iron-lab.org
      secretName: APP_NAME-tls
  rules:
    - host: HOSTNAME.iron-lab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: SERVICE_NAME
                port:
                  number: 80
